Fixed issue on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 div.container_bg {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
